# ArchiPy

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  index.html  mkdocs-fast.yml  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  skills-lock.json
.cursor/rules/: adapter-conventions.mdc  architecture-patterns.mdc  changelog.mdc  checks.mdc  documentation.mdc  python-code-style.mdc  testing-bdd.mdc  tooling-workflow.mdc  typing-strict.mdc
.github/workflows/: deploy-docs.yml  lint.yml  publish.yml  ruff-lint.yml  tests.yml  ty-lint.yml
404/: index.html
CODE_OF_CONDUCT/: index.html
api_reference/: index.html
api_reference/adapters/: index.html
api_reference/adapters/base/: index.html
api_reference/adapters/elasticsearch/: index.html
api_reference/adapters/email/: index.html
api_reference/adapters/kafka/: index.html
api_reference/adapters/keycloak/: index.html
api_reference/adapters/minio/: index.html
api_reference/adapters/payment_gateways/: index.html
api_reference/adapters/postgres/: index.html
api_reference/adapters/scylladb/: index.html
api_reference/adapters/sqlite/: index.html
api_reference/adapters/starrocks/: index.html
api_reference/adapters/temporal/: index.html
api_reference/configs/: index.html
api_reference/helpers/: index.html
api_reference/helpers/decorators/: index.html
api_reference/helpers/interceptors/: index.html
api_reference/helpers/metaclasses/: index.html
api_reference/helpers/utils/: index.html
api_reference/models/: index.html
api_reference/models/dtos/: index.html
api_reference/models/entities/: index.html
api_reference/models/types/: index.html
api_reference/utils/: index.html
archipy/adapters/elasticsearch/: adapters.py  ports.py
archipy/adapters/email/: adapters.py
archipy/adapters/kafka/: adapters.py  ports.py
archipy/adapters/keycloak/: adapters.py  ports.py
archipy/adapters/minio/: adapters.py  ports.py
archipy/adapters/redis/: adapters.py  mocks.py  ports.py  search.py  search_ports.py
archipy/adapters/schema_registry/: adapters.py  ports.py
archipy/adapters/scylladb/: adapters.py  ports.py
archipy/adapters/temporal/: adapters.py  base.py  ports.py  runtime.py  worker.py
archipy/adapters/vespa/: __init__.py  adapters.py  ports.py
archipy/configs/: base_config.py  config_template.py
archipy/helpers/decorators/: __init__.py  attribute_enforce.py  cache.py  deprecation_exception.py  deprecation_warnings.py  grpc_rate_limit.py  retry.py  timeout.py  (+3 more)
architecture/: index.html
changelog/: index.html
community/changelog/: index.html
community/code_of_conduct/: index.html
community/contributing/: index.html
community/faq/: index.html
community/license/: index.html
community/security/: index.html
concepts/: index.html
contributing/: index.html
contributing-docs/: index.html
development/: index.html
docs/: 404.md  architecture.md  changelog.md  concepts.md  contributing-docs.md  contributing.md  development.md  faq.md  features.md  index.md  installation.md  license.md  mkdocs-full.yml  mkdocs.yml  security.md  usage.md
docs/api_reference/: adapters.md  configs.md  helpers.md  index.md  models.md  utils.md
docs/community/: changelog.md  code_of_conduct.md  contributing.md  faq.md  license.md  security.md
docs/examples/: bdd_testing.md  config_management.md  dependency_injection.md  error_handling.md  index.md  observability.md  testing_strategy.md
docs/getting-started/: complete_user_example.md  concepts.md  installation.md  project_structure.md  quickstart.md
docs/source/: requirements.txt
docs/tutorials/: config_management.md  error_handling.md  index.md  observability.md  testing_strategy.md
examples/: index.html
examples/adapters/: index.html
examples/bdd_testing/: index.html
examples/config_management/: index.html
examples/dependency_injection/: index.html
examples/error_handling/: index.html
examples/helpers/: index.html
examples/observability/: index.html
examples/testing_strategy/: index.html
faq/: index.html
features/: app_utils.feature  base_dtos.feature  datetime_utils.feature  elastic_adapter.feature  environment.py  error_handling.feature  fastapi_metric_interceptor.feature  fastapi_rate_limit.feature  grpc_rate_limit.feature  index.html  kafka_adapters.feature  keycloak_adapter.feature  metric_interceptor.feature  minio_adapter.feature  redis_adapter.feature  scylladb_adapter.feature  temporal_adapter.feature  test_containers.py  test_containers_config.py  test_helpers.py  test_servers.py  vespa_adapter.feature
features/steps/: app_utils_steps.py  atomic_transaction_steps.py  base_dtos_steps.py  cache_decorator_steps.py  custom_errors_steps.py  datetime_utils_steps.py  elastic_adapter_steps.py  error_handling_steps.py  error_utils_steps.py  fastapi_error_handling_steps.py  fastapi_metric_interceptor_steps.py  fastapi_rate_limit_steps.py  grpc_error_handling_steps.py  grpc_rate_limit_steps.py  kafka_adapter_steps.py  keycloak_adapter_steps.py  metric_interceptor_steps.py  minio_adapter_steps.py  redis_adapter_steps.py  redis_mock_steps.py  scylladb_adapter_steps.py  temporal_adapter_steps.py  vespa_adapter_steps.py
features/test_workflows/: __init__.py  temporal_activities.py  temporal_workflows.py
get_started/: index.html
getting-started/complete_user_example/: index.html
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/project_structure/: index.html
getting-started/quickstart/: index.html
installation/: index.html
license/: index.html
scripts/: generate_unreleased_changelog.py
search/: search_index.json
security/: index.html
tutorials/: index.html
tutorials/adapters/: index.html
tutorials/config_management/: index.html
tutorials/dependency_injection/: index.html
tutorials/error_handling/: index.html
tutorials/helpers/: index.html
tutorials/observability/: index.html
tutorials/testing_strategy/: index.html
usage/: index.html
(+422 files in other folders)
