[project]
name = "archipy"
description = "Architecture + Python – Perfect for structured design."
authors = [
    { name = "Hossein Nejati", email = "hosseinnejati14@gmail.com" },
    { name = "Mehdi Einali", email = "einali@gmail.com" },
]
readme = "README.md"
version = "0.1.0" # This vesrion set on publish flow!
requires-python = ">=3.14,<4"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "jdatetime>=5.2.0",
]
license = { file = "LICENSE" }

[project.optional-dependencies]
# Core optional dependencies
aiosqlite = ["aiosqlite>=0.21.0"]
behave = ["behave>=1.3.3"]
cache = ["cachetools>=6.2.2", "async-lru>=2.0.5"]
dependency-injection = ["dependency-injector>=4.48.2"]
elastic-apm = ["elastic-apm>=6.24.1"]
elasticsearch = ["elasticsearch>=9.2.0"]
elasticsearch-async = ["elasticsearch[async]>=9.2.0"]
fakeredis = ["fakeredis>=2.32.1"]
fastapi = ["fastapi[all]>=0.124.0"]
grpc = ["grpcio>=1.76.0", "grpcio-health-checking>=1.76.0", "protobuf>=6.33.1"]
jwt = ["pyjwt>=2.10.1"]
kafka = ["confluent-kafka>=2.12.2"]
kavenegar = ["kavenegar>=1.1.2"]
keycloak = ["python-keycloak>=5.8.1", "cachetools>=6.2.2", "async-lru>=2.0.5"]
minio = ["minio>=7.2.20", "cachetools>=6.2.2", "async-lru>=2.0.5"]
parsian-ipg = ["zeep>=4.3.2", "requests[socks]>=2.32.5"]
postgres = ["psycopg[binary,pool]>=3.3.0"]
prometheus = ["prometheus-client>=0.23.1"]
redis = ["redis[hiredis]>=7.1.0"]
scheduler = ["apscheduler>=3.11.1"]
scylladb = ["scylla-driver>=3.29.6", "lz4>=4.4.5", "cachetools>=6.2.2", "async-lru>=2.0.5"]
sentry = ["sentry-sdk>=2.47.0"]
sqlalchemy = ["sqlalchemy>=2.0.44"]
starrocks = ["starrocks>=1.3.1", "pymysql>=1.1.2"]
starrocks-async = ["starrocks>=1.3.1", "aiomysql>=0.3.2"]
temporalio = ["temporalio>=1.20.0"]
testcontainers = ["testcontainers>=4.13.3"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = 'tests'
markers = []
filterwarnings = [
    'error',
    'ignore:This is a placeholder until pydantic-settings.*:UserWarning',
    'ignore::UserWarning',
    'ignore::DeprecationWarning'
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "add-trailing-comma>=4.0.0",
    "bandit>=1.9.2",
    "black>=25.12.0",
    "codespell>=2.4.1",
    "ty",
    "pre-commit-hooks>=6.0.0",
    "pre-commit>=4.5.0",
    "ruff>=0.14.7",
    "types-cachetools>=6.2.0.20251022",
    "types-grpcio>=1.0.0.20251009",
    "types-protobuf>=6.32.1.20251105",
    "types-pymysql>=1.1.0.20250916",
    "types-regex>=2025.11.3.20251106",
    "types-requests>=2.32.4.20250913",
    "validate-pyproject>=0.24.1",
]

docs = [
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-material>=9.7.0",
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=2.0.0",
    "mkdocstrings>=1.0.0",
    "pymdown-extensions>=10.18.0",
]


[project.urls]
Homepage = "https://syntaxarc.github.io/ArchiPy/"
Documentation = "https://archipy.readthedocs.io/"
"Bug Tracker" = "https://github.com/SyntaxArc/ArchiPy/issues"
"Source Code" = "https://github.com/SyntaxArc/ArchiPy"
"Contributing" = "https://github.com/SyntaxArc/ArchiPy/blob/master/CONTRIBUTING.md"
"Code of Conduct" = "https://github.com/SyntaxArc/ArchiPy/blob/master/CODE_OF_CONDUCT.md"


[tool.black]
# Enable colored output
color = true

# Set the maximum line length
line-length = 120

# Target Python version
target-version = ["py314"]

# Skip string normalization (useful for projects with mixed quote styles)
skip-string-normalization = false

# Exclude specific files and directories
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations  # Exclude database migration files
  | node_modules  # Exclude Node.js dependencies
  | __pycache__  # Exclude Python cache directories
)/
'''

[tool.ruff]
# Enable automatic fixes for supported rules
fix = true

lint.select = [
    "A", # flake8-builtins
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "C901", # complex-structure
    "D", # pydocstyle
    "E", # pycodestyle errors
    "ERA", # eradicate
    "F", # pyflakes
    "G", # flake8-logging-format
    "I", # isort
    "ICN", # flake8-import-conventions
    "RUF", # Ruff-specific rules
    "S", # flake8-bandit
    "T10", # flake8-debugger
    "T20", # flake8-print
    "TRY", # tryceratops
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]

# Explicitly ignore specific rules
lint.ignore = [
    "ANN002", # Missing type annotation for *args
    "ANN003", # Missing type annotation for **kwargs
    "BLE001", # Do not catch blind exception: `Exception`
    "C901", # Function is too complex (McCabe complexity)
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in `__init__`
    "E501", # Line too long (handled by Black)
    "F811", # Redefinition of unused function
    "G004", # Logging statement uses f-string
    "PLR0913", # Too many arguments in function (e.g., FastAPI Swagger)
    "PLR2004", # Magic value used in comparison
    "Q000", # Allow single quotes (conflicts with Black's double-quote preference)
    "RUF001", "RUF003", # String contains ambiguous characters
    "S101", # Ignore assert used (equivalent to bandit's B101)
    "S301", # Ignore pickle usage (equivalent to bandit's B301)
    "S403", # Ignore pickle usage (equivalent to bandit's B403)
    "TC002", # Type-checking import issues
    "TRY003", #Avoid specifying long messages outside the exception class
    "TRY301", # Abstract raise into a function
]

# Define source directories
src = ["archipy", "tests", "features"]

exclude = [
    "features/*",
    "scripts/*",
]

# Set line length to match Black's configuration
line-length = 120

# Target Python version
target-version = "py314"

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
# Ignore F811 (redefinition of function) in steps implementations
"archipy/configs/config_template.py" = ["S104"]  # Allow binding to all interfaces for containerized deployments
"archipy/models/errors/keycloak_errors.py" = ["ANN401"]  # Allow Any type for additional_data
"archipy/helpers/interceptors/grpc/base/client_interceptor.py" = ["ANN401"]  # Allow Any type for gRPC message types
"archipy/helpers/interceptors/grpc/trace/client_interceptor.py" = ["ANN401"]  # Allow Any type for gRPC message types
"archipy/helpers/decorators/sqlalchemy_atomic.py" = ["BLE001"]  # Allow complex decorator patterns
"archipy/helpers/decorators/*" = ["ANN401"]
"archipy/helpers/utils/jwt_utils.py" = ["S105"]
"archipy/helpers/utils/file_utils.py" = ["S324"]
"archipy/helpers/utils/keycloak_utils.py" = ["FBT001", "FBT002"]
"archipy/adapters/orm/sqlalchemy/ports.py" = ["ANN401"]
"archipy/adapters/orm/sqlalchemy/adapters.py" = ["ANN401"]
"archipy/adapters/keycloak/ports.py" = ["ANN401"]  # Allow Any type for **kwargs parameters
"archipy/adapters/redis/ports.py" = ["ANN401", "D102", "FBT001", "FBT002", "A002"]
"archipy/adapters/redis/adapters.py" = ["ANN401", "FBT001", "FBT002", "RET504", "PGH003"]
"archipy/adapters/redis/mocks.py" = ["ARG002", "ARG004", "ANN401"]
"archipy/adapters/scylladb/ports.py" = ["ANN401"]  # Allow Any type for CQL parameters
"archipy/adapters/scylladb/adapters.py" = ["BLE001", "ANN401"]  # Allow broad exceptions and Any types
"archipy/models/dtos/base_protobuf_dto.py" = ["ANN401"]
"archipy//helpers/utils/keycloak_utils.py" = ["B008"]
"archipy/adapters/keycloak/adapters.py" = ["BLE001"]
"archipy/adapters/kafka/adapters.py" = ["BLE001"]
"archipy/adapters/temporal/*" = ["ANN401", "TRY300", "RUF006"]  # Allow Any types for Temporal's dynamic system, else blocks, and asyncio task handling
"archipy/adapters/scylladb/*" = ["S608"]  # False positives - using parameterized queries with %s placeholders
"features/steps/*" = ["F811", "ANN001", "ANN201"]
"scripts/*" = ["S603", "S607"]

# Configure McCabe complexity
[tool.ruff.lint.mccabe]
max-complexity = 10  # Maximum allowed McCabe complexity

# Configure Pylint rules
[tool.ruff.lint.pylint]
max-args = 5  # Maximum number of function arguments
max-branches = 16  # Maximum number of branches in a function
max-returns = 16  # Maximum number of return statements in a function
max-statements = 50  # Maximum number of statements in a function

# Configure isort (import sorting)
[tool.ruff.lint.isort]
combine-as-imports = true  # Combine `import` and `from ... import` statements
known-first-party = ["archipy"]  # Treat `archipy` as a first-party module
section-order = [
    "future", # `__future__` imports
    "standard-library", # Standard library imports
    "third-party", # Third-party imports
    "first-party", # First-party imports (e.g., `archipy`)
    "local-folder", # Local folder imports
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"  # Use double quotes for inline strings
multiline-quotes = "double"  # Use double quotes for multiline strings

[tool.ruff.lint.pydocstyle]
convention = "google"  # Use Google-style docstrings

[tool.ty.environment]
# Target Python version
python-version = "3.14"

[tool.ty.src]
# Include source directories
include = ["archipy"]
# Exclude directories from type checking
exclude = ["features", "scripts"]

[tool.ty.rules]
# Enable strict type checking rules (similar to mypy strict mode)
# Error-level rules (default)
byte-string-type-annotation = "error"
call-non-callable = "error"
conflicting-argument-forms = "error"
conflicting-declarations = "error"
conflicting-metaclass = "error"
cyclic-class-definition = "error"
cyclic-type-alias-definition = "error"
duplicate-base = "error"
duplicate-kw-only = "error"
escape-character-in-forward-annotation = "error"
fstring-type-annotation = "error"
implicit-concatenated-string-type-annotation = "error"
inconsistent-mro = "error"
index-out-of-bounds = "error"
instance-layout-conflict = "error"
invalid-argument-type = "error"
invalid-assignment = "error"
invalid-attribute-access = "error"
invalid-await = "error"
invalid-base = "error"
invalid-context-manager = "error"
invalid-declaration = "error"
invalid-exception-caught = "error"
invalid-explicit-override = "error"
invalid-generic-class = "error"
invalid-key = "error"
invalid-legacy-type-variable = "error"
invalid-metaclass = "error"
invalid-method-override = "error"
invalid-named-tuple = "error"
invalid-newtype = "error"
invalid-overload = "error"
invalid-parameter-default = "error"
invalid-paramspec = "error"
invalid-protocol = "error"
invalid-raise = "error"
invalid-return-type = "error"
invalid-super-argument = "error"
invalid-syntax-in-forward-annotation = "error"
invalid-type-alias-type = "error"
invalid-type-arguments = "error"
invalid-type-checking-constant = "error"
invalid-type-form = "error"
invalid-type-guard-call = "error"
invalid-type-guard-definition = "error"
invalid-type-variable-constraints = "error"
missing-argument = "error"
missing-typed-dict-key = "error"
no-matching-overload = "error"
non-subscriptable = "error"
not-iterable = "error"
override-of-final-method = "error"
parameter-already-assigned = "error"
positional-only-parameter-as-kwarg = "error"
raw-string-type-annotation = "error"
static-assert-error = "error"
subclass-of-final-class = "error"
super-call-in-named-tuple-method = "error"
too-many-positional-arguments = "error"
type-assertion-failure = "error"
unavailable-implicit-super-arguments = "error"
unknown-argument = "error"
unresolved-attribute = "error"
unresolved-import = "error"
unresolved-reference = "error"
unsupported-bool-conversion = "error"
unsupported-operator = "error"
zero-stepsize-in-slice = "error"
# Warning-level rules (default) - set to error for strict checking
ambiguous-protocol-member = "error"
deprecated = "error"
ignore-comment-unknown-rule = "error"
invalid-ignore-comment = "error"
possibly-missing-attribute = "error"
possibly-missing-implicit-call = "error"
possibly-missing-import = "error"
redundant-cast = "error"
undefined-reveal = "error"
unresolved-global = "error"
unsupported-base = "error"
useless-overload-body = "error"
# Ignore-level rules (default) - set to error for strict checking
division-by-zero = "error"
possibly-unresolved-reference = "error"
unused-ignore-comment = "error"

[tool.config]
pyproject_root_var = "pyproject"

[tool.codespell]
ignore-words-list = "exat,convertor"
skip = ".git,__pycache__,build,dist"

[tool.bandit]
# Bandit configuration for security scanning
# https://bandit.readthedocs.io/en/latest/config.html

# Target directories to scan
targets = ["archipy"]

# Exclude directories from scanning
exclude_dirs = ["features", "docs", "scripts"]

# Skip specific test IDs
# B101: assert_used - Allow assert statements in tests
# B301: pickle - Allow pickle usage (needed for some serialization)
# B403: import_pickle - Allow pickle imports
skips = ["B101", "B301", "B403"]

[tool.behave]
# Parallel execution settings
parallel = 8
parallel_scheme = "multiprocessing"

# Output formatting
show_snippets = false
show_source = false
show_timings = true

# Logging and capture
capture = true
capture_stdout = true
capture_stderr = true
capture_log = true

# Test execution
stop = false
dry_run = false
verbose = false
